--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "GuiDevloper",
   "license": "MIT",
   "devDependencies": {
-    "nullstack": "~0.11.0"
+    "nullstack": "0.20.4"
   },
   "scripts": {
     "start": "npx nullstack start",
