🔧 Configure Prettier & VSCode formatOnSave

--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
     "@stripe/stripe-js": "^1.15.1",
     "poisonicon": "^0.1.2",
     "stripe": "^8.157.0"
+  },
+  "prettier": {
+    "arrowParens": "avoid",
+    "trailingComma": "none",
+    "singleAttributePerLine": true,
+    "bracketSameLine": false,
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true,
+    "printWidth": 80
   }
 }
