--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ NULLSTACK_PROJECT_DOMAIN="localhost"
 NULLSTACK_PROJECT_COLOR="#D22365"
 NULLSTACK_SERVER_PORT="5000"
 NULLSTACK_SECRETS_STRIPE="<YOUR SECRET KEY>"
+NULLSTACK_SETTINGS_STRIPE="<YOUR PUBLIC KEY>"
