🧑‍💻 Configure `~/` path alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
     "strict": false,
     "noImplicitAny": false,
     "jsx": "preserve",
-    "lib": ["ES2020", "DOM"]
+    "lib": ["ES2020", "DOM"],
+    "paths": {
+      "~/*": ["./src/*"]
+    }
   }
 }
